--- a/eb/requirements.txt
+++ b/eb/requirements.txt
@@ -19,7 +19,9 @@ MarkupSafe==1.0
 mock==1.3.0
 oauthlib==2.0.2
 olefile==0.44
+pathspec==0.5.0
 pbr==3.0.0
+Pillow==4.1.0
 PyJWT==1.5.0
 PySocks==1.6.7
 python-dateutil==2.6.0
