--- a/Twinty/app/src/main/AndroidManifest.xml
+++ b/Twinty/app/src/main/AndroidManifest.xml
@@ -17,5 +17,6 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="19"/>
 </manifest>
